portal/static/less/gil.less
/* ... */
@media (min-width: 768px) {
    .page-intro__main {
        font-size: 37px;
        line-height: 1.5;
    }
}

.page-intro__main--accent {
    color: #D2D1C5
}

.page-intro__main a {
    text-decoration: underline
}

.page-intro__main a:hover {
    text-decoration: none
}

.page-intro__sub {
    margin-bottom: 4px;
}

.page-intro__content {
    font-size: 22px;
    line-height: 1.7;
    margin: 0 auto;
    max-width: 780px;
    margin: 0 auto;
    padding-top: 40px
}
@media (min-width: 768px) {
    .page-intro__content {
        font-size: 25px;
    }
}

@media (min-width:900px) {
    .page-intro__content {
        padding-top: 210px
    }
}

@media (max-width:767px) {
    .page-intro__content {
        padding-top: 50px
    }
}

.page-intro .button-callout {
    padding-bottom: 0
}

.module {
    color: #FFF;
    padding: 82px 0
}

@media (max-width:767px) {
    .module {
        padding-left: 20px;
        padding-right: 20px
    }
}

.module__copy {
    font-size: 33px;
    line-height: 45px;
    margin: 0;
    text-align: center
}

@media (max-width:767px) {
    .module__copy {
        font-size: 25px;
        line-height: 40px;
        padding-left: 16px;
        padding-right: 16px;
    }
}

.module__head {
    font-size: 35px;
    line-height: 44px;
    font-weight: 700;
    text-align: center;
    margin: 0 0 40px;
    padding: 0 1em
}

.module__heading {
    font-size: 30px;
    line-height: 38px;
    font-weight: 700;
    margin: 0 0 20px;
    text-align: center
}

@media (min-height:900px) {
    .module__heading {
        font-size: 35px;
        line-height: 1.3;
    }
}

@media (min-height:992px) {
    .module__heading {
        margin: 0 0 30px
    }
}

@media (max-width:767px) {
    .accent-heading {
        font-size: 14px;
        letter-spacing: 2px;
    }
    .module__heading {
        font-size: 2em;
        line-height: 40px;
        margin: 0 .2em
    }
}

[class*='theme-brown'] .module__heading--accent {
    color: #BCC2A6
}

.module__body {
    font-size: 25px;
    line-height: 30px;
    margin: 0 auto 25px;
    max-width: 780px;
    text-align: center;
    padding: 0 1em
}

@media (min-width:992px) {
    .module__body {
        line-height: 1.5;
        padding: 0;
    }
}

.module__body--left {
    text-align: left
}

@media (max-width:767px) {
    .module__head {
        font-size: 24px;
        line-height: 1.5;
    }
    .module__body {
        font-size: 22px;
        line-height: 1.5;
        margin: 1em auto
    }
}

.module__form {
    display: inline-block;
    margin-top: 25px;
    width: 100%
}

.module__img {
    text-align: center;
    padding: 30px 0;
    img {
        display: inline-block
    }
}

.module--theme-brown {
    background: #5E5B56
}

.module-wrap--theme-teal {
    background: #7C959E;
    color: #FFF;
    .accent-heading,
    .side-nav h3,
    .side-nav .module-wrap--theme-teal h3 {
        color: #BFC0BD
    }
    [class*="--accent"] {
        color: #BFC0BD
    }
    .more-arrow {
        padding: 32px 0 18px;
    }
    .more-arrow>a {
        color: #FFF
    }
    .more-arrow>a:hover {
        color: #4A4A4A
    }
    .next-down figure {
        color: #BFC0BD;
        opacity: .5
    }
}

.module-wrap--theme-gray {
    background: #5F676E;
    color: #FFF;
    .accent-heading,
    .side-nav h3,
    .side-nav .module-wrap--theme-gray h3 {
        color: #BFC0BD
    }
    [class*="--accent"] {
        color: #BFC0BD
    }
    .more-arrow>a {
        color: #FFF
    }
    .more-arrow>a:hover {
        color: #4A4A4A
    }
    .next-down figure {
        color: #BFC0BD;
        opacity: .5
    }
}
aside {
    .accent-heading {
        padding-top: 30px;
    }
    .module {
        color: #fff;
        padding: 100px 8px 56px;
    }
}
.footnote-container {
    aside {
        .module {
            color: #fff;
            padding: 28px 8px 53px;
        }
    }
}
.page-exercise-diet-portal {
    .module-wrap--theme-gray {
        .accent-heading {
            padding-top: 0;
        }
    }
}
.module-wrap--theme-gray-light {
    background: #959897;
    color: #FFF;
    .accent-heading,
    .side-nav h3,
    .side-nav .module-wrap--theme-gray-light h3 {
        color: #D2D1C5
    }
    [class*="--accent"] {
        color: #D2D1C5
    }
    .more-arrow>a {
        color: #FFF
    }
    .more-arrow>a:hover {
        color: #4A4A4A
    }
    .next-down figure {
        color: #D2D1C5;
        opacity: .5
    }
}

.module-wrap--theme-olive {
    background: #666860;
    color: #FFF;
    .accent-heading,
    .side-nav h3,
    .side-nav .module-wrap--theme-olive h3 {
        color: #A9B2B8
    }
    [class*="--accent"] {
        color: #A9B2B8
    }
    .more-arrow>a {
        color: #FFF
    }
    .more-arrow>a:hover {
        color: #4A4A4A
    }
    .next-down figure {
        color: #A9B2B8;
        opacity: .5
    }
}

.module-wrap--theme-olive .accent-heading,
.module-wrap--theme-olive .side-nav h3,
.side-nav .module-wrap--theme-olive h3 {
    color: #A9B2B8
}

.module-wrap--theme-olive [class*="--accent"] {
    color: #A9B2B8
}

.module-wrap--theme-olive .more-arrow>a {
    color: #FFF
}

.module-wrap--theme-olive .more-arrow>a:hover {
    color: #4A4A4A
}

.module-wrap--theme-olive .next-down figure {
    color: #A9B2B8;
    opacity: .5
}

.module-wrap--theme-blue {
    background: #3B4449;
    color: #FFF;
    accent-heading,
    .side-nav h3,
    .side-nav .module-wrap--theme-blue h3 {
        color: #D2D1C5
    }
    [class*="--accent"] {
        color: #D2D1C5
    }
    .more-arrow>a {
        color: #FFF
    }
    .more-arrow>a:hover {
        color: #FFF
    }
    .next-down figure {
        color: #D2D1C5;
        opacity: .5
    }
}
@media (min-width: 1200px) {
    .module-wrap--theme-blue {
        .module {
            padding: 88px 0 88px;
        }
    }
}
/* ... */

